# python-agents-examples

./: pyproject.toml
avatars/tavus/: tavus.py
avatars/tavus/voice-assistant-frontend/app/api/connection-details/: route.ts
avatars/tavus/voice-assistant-frontend/components/: FlashCardContainer.tsx  QuizContainer.tsx
