[project]
name = "python-agents-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "livekit-agents[deepgram,elevenlabs,openai,silero,tavus,turn-detector]>=1.0.22",
    "livekit-plugins-noise-cancellation>=0.2.4",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "torch>=2.7.0",
]
